// This file is auto-generated, DO NOT make any changes here
syntax = "proto2";
package de.rki.coronawarnapp.server.protocols.internal;

import "external/exposurenotification/temporary_exposure_key_export.proto";
import "internal/pt/check_in.proto";

message SubmissionPayload {
  repeated de.rki.coronawarnapp.server.protocols.external.exposurenotification.TemporaryExposureKey keys = 1;
  optional bytes requestPadding = 2;
  repeated string visitedCountries = 3;
  optional string origin = 4;
  optional bool consentToFederation = 5;
  repeated de.rki.coronawarnapp.server.protocols.internal.pt.CheckIn checkIns = 6 [deprecated = true];
  optional SubmissionType submissionType = 7 [default = SUBMISSION_TYPE_PCR_TEST];
  repeated de.rki.coronawarnapp.server.protocols.internal.pt.CheckInProtectedReport checkInProtectedReports = 8;

  enum SubmissionType {
    SUBMISSION_TYPE_PCR_TEST = 0;
    SUBMISSION_TYPE_RAPID_TEST = 1;
    SUBMISSION_TYPE_HOST_WARNING = 2;
    SUBMISSION_TYPE_SRS_SELF_TEST = 3;
    SUBMISSION_TYPE_SRS_RAT = 4;
    SUBMISSION_TYPE_SRS_REGISTERED_PCR = 5;
    SUBMISSION_TYPE_SRS_UNREGISTERED_PCR = 6;
    SUBMISSION_TYPE_SRS_RAPID_PCR = 7;
    SUBMISSION_TYPE_SRS_OTHER = 8;
  }
}
